--- a/index.html
+++ b/index.html
@@ -70,35 +70,188 @@
               </div>
             </div>
           </div>
-          <!-- triangle card -->
-          <div class="card w-96 bg-base-100 shadow-xl">
+          <!-- rectangular card -->
+          <div class="card w-96 bg-base-100 shadow-xl border-2">
             <figure>
-              <img
-                src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
-                alt="Shoes"
-              />
+              <img class="pt-6" src="images/rectangle.png" alt="Triangle" />
             </figure>
             <div class="card-body">
-              <h2 class="card-title">Shoes!</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
+              <div class="text-center">
+                <h2 class="font-bold text-2xl mb-3">Rectangular</h2>
+                <p>Area (A) = 0.5 * w * l</p>
+              </div>
+              <div class="text-center my-4">
+                <input
+                  id="rectangle-width"
+                  class="w-24 bg-gray-100 text-center rounded-md"
+                  type="text"
+                  placeholder="width"
+                />
+                <span class="mx-2">cm</span>
+                <input
+                  id="rectangle-lenght"
+                  class="w-24 bg-gray-100 text-center rounded-md"
+                  type="text"
+                  placeholder="lenght"
+                />
+                <span class="ml-2">cm</span>
+              </div>
+              <p class="text-xl text-center">Area : <span  id="rectangle-area"></span> <span>cm<sup>2</sup></span></p>
               <div class="card-actions justify-end">
-                <button class="btn btn-primary">Buy Now</button>
+                <button
+                  class="btn btn-primary w-full"
+                  onclick="rectangleCalculate()"
+                >
+                  Calculate
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- parallelogram card -->
+          <div class="card w-96 bg-base-100 shadow-xl border-2">
+            <figure>
+              <img class="pt-6" src="images/parallelogram.png" alt="Triangle" />
+            </figure>
+            <div class="card-body">
+              <div class="text-center">
+                <h2 class="font-bold text-2xl mb-3">Parallelogram</h2>
+                <p>Area (A) = b * h</p>
+              </div>
+              <div class="text-center my-4">
+                <input
+                  id="para-base"
+                  class="w-24 bg-gray-100 text-center rounded-md"
+                  type="text"
+                  placeholder="Base"
+                />
+                <span class="mx-2">cm</span>
+                <input
+                  id="para-height"
+                  class="w-24 bg-gray-100 text-center rounded-md"
+                  type="text"
+                  placeholder="Height"
+                />
+                <span class="ml-2">cm</span>
+              </div>
+              <p class="text-xl text-center">Area : <span  id="para-area"></span> <span>cm<sup>2</sup></span></p>
+              <div class="card-actions justify-end">
+                <button
+                  class="btn btn-primary w-full"
+                  onclick="parallelogramCalculate()"
+                >
+                  Calculate
+                </button>
               </div>
             </div>
           </div>
           <!-- triangle card -->
-          <div class="card w-96 bg-base-100 shadow-xl">
+          <div class="card w-96 bg-base-100 shadow-xl border-2">
             <figure>
-              <img
-                src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
-                alt="Shoes"
-              />
+              <img class="pt-6" src="images/triangle.png" alt="Triangle" />
             </figure>
             <div class="card-body">
-              <h2 class="card-title">Shoes!</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
+              <div class="text-center">
+                <h2 class="font-bold text-2xl mb-3">Triangle</h2>
+                <p>Area (A) = 0.5 * b * h</p>
+              </div>
+              <div class="text-center my-4">
+                <input
+                  id="triangle-base"
+                  class="w-24 bg-gray-100 text-center rounded-md"
+                  type="text"
+                  placeholder="Base"
+                />
+                <span class="mx-2">cm</span>
+                <input
+                  id="triangle-height"
+                  class="w-24 bg-gray-100 text-center rounded-md"
+                  type="text"
+                  placeholder="Height"
+                />
+                <span class="ml-2">cm</span>
+              </div>
+              <p class="text-xl text-center">Area : <span  id="triangle-area"></span> <span>cm<sup>2</sup></span></p>
               <div class="card-actions justify-end">
-                <button class="btn btn-primary">Buy Now</button>
+                <button
+                  class="btn btn-primary w-full"
+                  onclick="triangleCalculate()"
+                >
+                  Calculate
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- triangle card -->
+          <div class="card w-96 bg-base-100 shadow-xl border-2">
+            <figure>
+              <img class="pt-6" src="images/triangle.png" alt="Triangle" />
+            </figure>
+            <div class="card-body">
+              <div class="text-center">
+                <h2 class="font-bold text-2xl mb-3">Triangle</h2>
+                <p>Area (A) = 0.5 * b * h</p>
+              </div>
+              <div class="text-center my-4">
+                <input
+                  id="triangle-base"
+                  class="w-24 bg-gray-100 text-center rounded-md"
+                  type="text"
+                  placeholder="Base"
+                />
+                <span class="mx-2">cm</span>
+                <input
+                  id="triangle-height"
+                  class="w-24 bg-gray-100 text-center rounded-md"
+                  type="text"
+                  placeholder="Height"
+                />
+                <span class="ml-2">cm</span>
+              </div>
+              <p class="text-xl text-center">Area : <span  id="triangle-area"></span> <span>cm<sup>2</sup></span></p>
+              <div class="card-actions justify-end">
+                <button
+                  class="btn btn-primary w-full"
+                  onclick="triangleCalculate()"
+                >
+                  Calculate
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- triangle card -->
+          <div class="card w-96 bg-base-100 shadow-xl border-2">
+            <figure>
+              <img class="pt-6" src="images/triangle.png" alt="Triangle" />
+            </figure>
+            <div class="card-body">
+              <div class="text-center">
+                <h2 class="font-bold text-2xl mb-3">Triangle</h2>
+                <p>Area (A) = 0.5 * b * h</p>
+              </div>
+              <div class="text-center my-4">
+                <input
+                  id="triangle-base"
+                  class="w-24 bg-gray-100 text-center rounded-md"
+                  type="text"
+                  placeholder="Base"
+                />
+                <span class="mx-2">cm</span>
+                <input
+                  id="triangle-height"
+                  class="w-24 bg-gray-100 text-center rounded-md"
+                  type="text"
+                  placeholder="Height"
+                />
+                <span class="ml-2">cm</span>
+              </div>
+              <p class="text-xl text-center">Area : <span  id="triangle-area"></span> <span>cm<sup>2</sup></span></p>
+              <div class="card-actions justify-end">
+                <button
+                  class="btn btn-primary w-full"
+                  onclick="triangleCalculate()"
+                >
+                  Calculate
+                </button>
               </div>
             </div>
           </div>
